[gd_scene load_steps=52 format=3 uid="uid://25y8xv1top5p"]

[ext_resource type="Script" path="res://player/player.gd" id="1_746xw"]
[ext_resource type="Texture2D" uid="uid://tn7owb5lfoih" path="res://assets/gnome.png" id="2_ujynw"]
[ext_resource type="Script" path="res://state_machine.gd" id="3_d5cik"]
[ext_resource type="Script" path="res://player/states/player_idle_state.gd" id="4_tltv7"]
[ext_resource type="Script" path="res://player/states/player_running_state.gd" id="5_kxpwd"]
[ext_resource type="Script" path="res://player/states/player_attacking_state.gd" id="6_i38ct"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g6hcx"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hetwd"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pte7j"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwauw"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeliw"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkkgo"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgojf"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mbcd"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8c06"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 480, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_08kt4"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 480, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifh4o"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 480, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1slsy"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 480, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibx8f"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwn1m"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdol5"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_81mr7"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvc11"]
atlas = ExtResource("2_ujynw")
region = Rect2(320, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_umlxb"]
atlas = ExtResource("2_ujynw")
region = Rect2(400, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyen4"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtone"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qv6k"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_immvr"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkqya"]
atlas = ExtResource("2_ujynw")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8uu4"]
atlas = ExtResource("2_ujynw")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeqo0"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbd3a"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8xsy"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_desk2"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdaep"]
atlas = ExtResource("2_ujynw")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_678qj"]
atlas = ExtResource("2_ujynw")
region = Rect2(400, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug21o"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sit0j"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1oui"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5dy2"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhkgo"]
atlas = ExtResource("2_ujynw")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_88xp3"]
atlas = ExtResource("2_ujynw")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwthk"]
atlas = ExtResource("2_ujynw")
region = Rect2(0, 560, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_muq2r"]
atlas = ExtResource("2_ujynw")
region = Rect2(80, 560, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6apd5"]
atlas = ExtResource("2_ujynw")
region = Rect2(160, 560, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp2ne"]
atlas = ExtResource("2_ujynw")
region = Rect2(240, 560, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3afa"]
atlas = ExtResource("2_ujynw")
region = Rect2(320, 560, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob51l"]
atlas = ExtResource("2_ujynw")
region = Rect2(400, 560, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_dsiir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6hcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pte7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwauw")
}],
"loop": true,
"name": &"idle_b",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeliw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkkgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgojf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mbcd")
}],
"loop": true,
"name": &"idle_f",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8c06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08kt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifh4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1slsy")
}],
"loop": true,
"name": &"idle_s",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibx8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwn1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdol5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81mr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvc11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umlxb")
}],
"loop": false,
"name": &"punch_b",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyen4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtone")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qv6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_immvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkqya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8uu4")
}],
"loop": false,
"name": &"punch_f",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeqo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbd3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8xsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_desk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdaep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_678qj")
}],
"loop": true,
"name": &"run_b",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug21o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sit0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1oui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5dy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhkgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88xp3")
}],
"loop": true,
"name": &"run_f",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwthk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muq2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6apd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp2ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3afa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob51l")
}],
"loop": true,
"name": &"run_s",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kgd0v"]
height = 34.0

[sub_resource type="AudioStream" id="AudioStream_e6xlb"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("idle_state", "running_state", "attacking_state")]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_746xw")
idle_state = NodePath("StateMachine/PlayerIdleState")
running_state = NodePath("StateMachine/PlayerRunningState")
attacking_state = NodePath("StateMachine/PlayerAttackingState")
SPEED = 300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_dsiir")
animation = &"punch_f"
autoplay = "idle_f"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_kgd0v")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("3_d5cik")
initial_state = NodePath("PlayerIdleState")

[node name="PlayerIdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("running_state", "attacking_state", "player")]
script = ExtResource("4_tltv7")
running_state = NodePath("../PlayerRunningState")
attacking_state = NodePath("../PlayerAttackingState")
player = NodePath("../..")
animation_name = "idle_f"

[node name="PlayerRunningState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attacking_state", "idle_state", "player")]
script = ExtResource("5_kxpwd")
attacking_state = NodePath("../PlayerAttackingState")
idle_state = NodePath("../PlayerIdleState")
up_animation_name = "run_b"
down_animation_name = "run_f"
side_animation_name = "run_s"
player = NodePath("../..")
animation_name = "run_f"

[node name="PlayerAttackingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "running_state", "player")]
script = ExtResource("6_i38ct")
idle_state = NodePath("../PlayerIdleState")
running_state = NodePath("../PlayerRunningState")
up_animation_name = "punch_b"
down_animation_name = "punch_f"
side_animation_name = "punch_f"
player = NodePath("../..")
animation_name = "punch_f"

[node name="Hurtboxes" type="Node2D" parent="."]
visible = false

[node name="UpHurtbox" type="Area2D" parent="Hurtboxes"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtboxes/UpHurtbox"]
polygon = PackedVector2Array(-68, -5, -68, -5, -60, -33, -37, -59, -7, -69, 22, -65, 50, -48, 67, -28, 59, -15, 35, -4, 14, -27, -9, -34, -24, -23, -33, -6)

[node name="RightHurtbox" type="Area2D" parent="Hurtboxes"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtboxes/RightHurtbox"]
polygon = PackedVector2Array(25, -72, 43, -67, 61, -58, 76, -39, 88, -7, 87, 20, 81, 41, 67, 42, 33, 26, 44, -2, 34, -27, 6, -42)

[node name="LeftHurtbox" type="Area2D" parent="Hurtboxes"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtboxes/LeftHurtbox"]
polygon = PackedVector2Array(-26, -73, -11, -45, -32, -30, -41, -12, -42, 11, -36, 30, -65, 42, -80, 42, -89, 14, -87, -15, -72, -45, -50, -66)

[node name="DownHurtbox" type="Area2D" parent="Hurtboxes"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtboxes/DownHurtbox"]
polygon = PackedVector2Array(-42, 31, -50, 42, -41, 55, -25, 68, -4, 80, 22, 84, 39, 81, 53, 71, 66, 52, 68, 24, 40, 12, 20, 35, 1, 34, -17, 20)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStream_e6xlb")
